[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "easypycode"
version = "1.0.0"
description = "Utility functions for Windows Python scripting"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "tromoSM" }
]
requires-python = ">=3.8"
classifiers = [
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only"
]

[tool.setuptools]
py-modules = ["easypycode"]
